# resolvetrace-contract

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: README.md  anti-drift.yml  conformance.yml
api-spec/: openapi.yaml
conformance/: .gitignore  README.md  package.json  tsconfig.json
conformance/python-client/: run_masking.py
conformance/src/: config.ts  envelope.ts  http.ts  index.ts  report.ts  types.ts  ulid.ts
conformance/src/cases/: connectivity.ts  endpoint-parity.ts  idempotency.ts  key-opacity.ts  masking-parity.ts  rate-limit.ts  replay-mode.ts  replay.ts  schema.ts
conformance/src/fixtures/: pii-samples.json
schemas/: README.md  api-responses.json  events.json  replay.json  scrubber-rules.digest.txt  session.json
schemas/fixtures/api-responses/: invalid-error-missing-code.json  valid-error-response.json  valid-rate-limit-429.json
schemas/fixtures/events/: invalid-bad-ulid.json  valid-with-attributes.json
schemas/fixtures/replay/: invalid-signed-url-oversize.json
schemas/fixtures/session/: invalid-end-unknown-reason.json
schemas/src/: api-responses.ts  events.ts  index.ts  replay.ts  session.ts
scripts/: build-schemas.ts  compute_rules_digest.py  dump-ts-sdk-payloads.ts  dumper-self-test.ts  validate-fixtures.ts  validate-openapi.ts  validate-sdk-output.ts
sdk/python/: README.md  pyproject.toml
sdk/python/resolvetrace/: __init__.py  client.py  config.py  envelope.py  errors.py  identity.py  models.py  scrubber-rules.matrix.json  scrubber.py  session.py  transport.py  ulid.py
sdk/python/scripts/: regenerate_models.py
sdk/python/tests/: _fakes.py  test_config.py  test_envelope.py  test_identity.py  test_scrubber.py  test_session.py  test_session_recovery.py  test_transport.py  test_ulid.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
sdk/typescript/src/: client.ts  config.ts  constants.ts  envelope.ts  errors.ts  identity.ts  index.ts  recent-context.ts  report-widget.ts  report.ts  runtime.ts  scrubber-rules.ts  scrubber.ts  session.ts  transport.ts  types.ts  ulid.ts
sdk/typescript/tests/: autocapture.test.ts  breadcrumbs.test.ts  client.test.ts  config.test.ts  envelope.test.ts  identity.test.ts  multi-clip-capability.test.ts  replay.test.ts  report.test.ts  scrubber.test.ts  session.test.ts  support-code.test.ts  transport.test.ts  ulid.test.ts
(+71 files in other folders)
