[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "resolvetrace"
version = "0.1.0"
description = "Official Python SDK for ResolveTrace: capture events and session telemetry with a dumb-client, endpoint-only configuration."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "ResolveTrace" },
]
keywords = [
  "resolvetrace",
  "observability",
  "telemetry",
  "events",
  "session",
  "sdk",
  "privacy",
  "pii",
  "scrubber",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.25",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "datamodel-code-generator>=0.25",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://resolvetrace.com"
Documentation = "https://docs.resolvetrace.com"
Repository = "https://github.com/peaktek/resolvetrace-contract"
Issues = "https://github.com/peaktek/resolvetrace-contract/issues"

[tool.hatch.build.targets.wheel]
packages = ["resolvetrace"]

[tool.hatch.build.targets.wheel.force-include]
# Stage-1 scrubber rule matrix — shipped verbatim inside the package so
# `importlib.resources` can read it at runtime without filesystem guessing.
# The canonical source is at `schemas/scrubber-rules.matrix.json` at the
# contract-repo root; a pre-commit / regeneration hook (scripts/compute_rules_digest.py)
# keeps this copy in sync.
"resolvetrace/scrubber-rules.matrix.json" = "resolvetrace/scrubber-rules.matrix.json"

[tool.hatch.build.targets.sdist]
include = [
  "/resolvetrace",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
